package.json: Replace str-copy.c with clibs/strdup

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "src/substr.h"
   ],
   "dependencies": {
-    "stephenmathieson/str-copy.c": "*"
+    "strdup": "0.0.0"
   },
   "development": {
     "stephenmathieson/describe.h": "*"
